--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>ARMYTRIX - Automotive Weaponized</title>
 
+      <link rel='stylesheet' href='estilos.css'>
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="icon" type="image/png" href="img/favicon.png" />
@@ -309,8 +311,8 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/v.pdf" class="portfolio-box">
-                        <img src="img/portfolio/img/voltexImport.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/img/voltexImport.jpg" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/img/voltexImport.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -324,8 +326,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/img/6.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/img/6.jpg" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/img/6.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -339,8 +341,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/img/3.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/img/3.jpg" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/img/3.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -354,8 +356,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/img/16.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/img/16.jpg" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/img/16.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -369,8 +371,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/img/19.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/img/19.jpg" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/img/19.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -384,8 +386,8 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="#" class="portfolio-box">
-                        <img src="img/portfolio/img/50.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/img/50.jpg" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/img/50.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -403,12 +405,14 @@
     </section>
 
 
+
+
     <aside class="bg-dark">
         <div class="container text-center">
-          <!--  <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
-            </div> -->
+           <div class="call-to-action">
+                <h2>Catalogo completo</h2>
+              <embed src="img/v.pdf" width="1000" height="580"> </embed>
+            </div>
         </div>
     </aside>
 
@@ -430,8 +434,19 @@
                     <p><a href="mailto:your-email@your-domain.com">Jhusey@volteximport.com</a></p>
                 </div>
             </div>
+            <div>
+    <center><a href="https://www.facebook.com/VoltexImport/?fref=ts" target="_blank"><img src="img/f.png"></a></center>
+</div>
         </div>
     </section>
+
+    <form class='contacto'>
+    <div><label>Tu Nombre:</label><input type='text' value=''></div>
+    <div><label>Tu Email:</label><input type='text' value=''></div>
+    <div><label>Asunto:</label><input type='text' value=''></div>
+    <div><label>Mensaje:</label><textarea rows='6'></textarea></div>
+    <div><input type='submit' value='Envia Mensaje'></div>
+</form>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
