--- a/index.html
+++ b/index.html
@@ -68,13 +68,8 @@
                             </ul>
                     </li>
                     <li>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="" >lista de productos</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="page-scroll" href="#">Sistema de Escape Valvetronic (ARMYTRIX)</a></li>
-                          <li><a class="page-scroll" href="#">PERFORMANCE TUNING BOX(ARMYTRON)</a></li>
-                          <li><a class="page-scroll" href="#">CHECK ENGINE LIGHT DELETE DONGLE(ARMYNATOR)</a></li>
+                        <a class="page-scroll"  href="#portfolio" >Portafolio</a>
 
-                        </ul>
                     </li>
                     <li>
                         <a class="dropdown-toggle" data-toggle="dropdown" href="">tech</a>
@@ -113,85 +108,20 @@
                        avanzada tecnología de sistema de escape que va a cuestionar todo lo que pensabas
                        que sabía acerca de la conducción de rendimiento.
                     </p>
-                    <br/>
-                    <p class="text-faded">
-                      Al seguir el credo de la consecución de la mayor potencia, sonido superior y verdadera
-                         versatilidad, construimos sistemas de escape Valvetronic rendimiento supremos que son segundos
-                          a ninguno. Todo fomentado por una cultura de la perseverancia y la innovación. ARMYTRIX no sólo
-                          crea escapes, creamos experiencias.
-                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      La combinación de los conocimientos y las ideas de nuestros ingenieros alemanes y japoneses, ARMYTRIX es el faro de revolucion,
-                       diseño y fabricación magistral. Estamos indiscutible en uno de los mejores productores de gama alta de escape de alto rendimiento
-                       sistemas en la industria automotora de la actualidad.
-                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Apreciamos el hecho de que cada uno de los vehículos de alto rendimiento son sofisticadas máquinas diseñadas para satisfacer nuestro deseo
-                       para poner a prueba los límites. En consecuencia, los reemplazos del mercado de accesorios deben ser capaces de soportar el castigo y empujarlos
-                       más allá de lo imaginable.
-                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Nuestra pasión, experiencia y calidad son evidentes en nuestro diseño y fabricación de titanio aeroespacial y T304 de acero
-                       sistemas de acero. Los sistemas son probados en varias ocasiones y faltas eliminados para asegurarse de que obtiene el mejor absoluto, de escape a realizar
-                       posible.
-                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Escapes ARMYTRIX están diseñados para las especificaciones de cada vehículo y hechos a mano para garantizar un ajuste perfecto. Nos 3D escaneamos nuestra Audi, BMW, Ferrari, Lamborghini, McLaren, Mercedes-Benz, Nissan, Porsche y Volkswagen, para crear sistemas con la máxima compatibilidad.
-                    </p>
-                    <p class="text-faded">
-                      Nuestra firma acústica de escape se atribuyen al material utilizado y los complejos diseños de cámara interna. Desde un rev baja ronronear todo el camino hasta un aullido tono alto, lo tenemos todo cubierto. Las notas Eargasmic están obligados a convertir cualquier vehículo en el centro de la atención.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Nuestra innovadora tecnología Valvetronic trae versatilidad sin precedentes para los operadores. Un llavero simple, una prensa de un botón; a decidir cuándo y cómo quiere ser escuchado. Estamos dando la espalda poder para el conductor; una para gobernarlos a todos.                    </p>
-                    <br/>
-                    <p class="text-faded">
 
-                      El ARMYTRIX APP es una adición simple pero potente al arsenal, diseñado para mejorar la experiencia total sintonía, mediante la vinculación de la última tecnología con nuestra línea existente de productos. Esta combinación revolucionaria va a cambiar la forma de pensar sobre la presentación y el rendimiento.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      La aplicación es compatible con los sistemas tanto de Android y iOS, a través de una multitud de plataformas de teléfonos inteligentes, tabletas y otros dispositivos móviles. Desde dispositivo designado se puede medir con precisión el rendimiento del vehículo en ese momento exacto.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Se conecta de forma inalámbrica al Módulo OBDII móvil ARMYTRIX que extrae datos de la ECU y la transmite, en tiempo real, en el dispositivo de elección. Las lecturas de la ECU son datos registrados a altas velocidades de datos que no se encuentran en ningún otro dispositivo comercial. Mantener te informará de todo!                    </p>
-                    <br/>
-                    <p class="text-faded">
-
-                      Nuestro exclusivo sistema cuenta con un convertidor de códigos de avería relacionados mecanismo catalítico que mantiene el vehículo funcionando sin problemas y de manera óptima. No más signo de verificación del motor se apague su momento en el sol. El módulo Plug-n-Play limpio y seguro proporciona un soplo de aire fresco de la vieja restricción, desordenado, alambre. Completamente unshackled, la libertad al alcance, el verdadero potencial de los tubos de escape ARMYTRIX está totalmente desatado por el mundo para ver.                    </p>
                     <h2 class="section-heading" id="exhaust_warranty">GARANTÍA DE ESCAPE</h2>
                     <hr class="light">
                     <p class="text-faded">
 
                       ARMYTRIX CORP. Garantiza que sus productos están libres de defectos en materiales y mano de obra. Garantía se extiende sólo al comprador original con prueba de compra y para el vehículo original en el que se instaló el producto (s). La garantía no es transferible y es válida durante 12 meses a partir de la fecha de instalación. Todos los gastos de envío y los costos de aranceles asociados con esta garantía son de exclusiva responsabilidad del cliente.                    </p>
                     <br/>
-                    <p class="text-faded">
-                      Al recibir el producto (s), es responsabilidad personal del comprador de examinar las condiciones de la parte (s) antes de la instalación. Si cualquier parte (s) que demuestra defectos de materiales y / o mano de obra, el comprador debe documentar los defectos), póngase en contacto ARMYTRIX inmediatamente y devolver el producto (s) dentro de los 30 días. Nosotros reemplazamos todos los artículos defectuosos de forma gratuita, pero el costo de transporte incurrido será por cuenta del comprador.                    </p>
-                    <br/>
-                    <p class="text-faded">
 
-                      Garantía se considerará nula si daños en el producto (s) se debieron a una instalación incorrecta y / o uso inapropiado, incluyendo, pero no limitado a: el off-road, carreras, alteraciones no autorizadas al producto (s), falta de atención, daños por impacto y cualquier otro daño causado por el uso del producto (s) que no sea destinado por el fabricante.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Para proteger la integridad y funcionalidad del sistema de escape, en el modo de apagado cuando se alcanza 4.500 RPM o cuando la presión del turbo alcanza 0,8 bar, las válvulas se abrirá automáticamente como medida de seguridad. Un recordatorio amistoso, por que para cortar el sistema de escape de las posibilidades de la activación de la señal de "Check Engine" se incrementan y nuestra garantía no cubre esta u otras incompatibilidades de software. Recomendamos reasignación de la ECU del vehículo para evitar posibles conflictos.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Sistemas de escape ARMYTRIX) deben ser instalados por un técnico (s) certificado para mantener su estado de la garantía. Nos reservamos el derecho de retener la emisión de crédito hasta que la pieza defectuosa (s) ha sido devuelto y se examinaron para determinar la razón de la falta.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      ARMYTRIX no será responsable de los daños y el desgaste y desgarre diarias que se producen en condiciones normales de conducción; incluyendo, entre otros: el hombre o daños naturales a la superficie externa, deterioro interno, decoloración, óxido y la corrosión. Desgaste y lágrimas son inevitables; se recomienda chequeos regulares y cuidado para extender la vida útil del producto (s) y mantener su rendimiento.                    </p>
                     <h2 class="section-heading" id="return">POLITICA DE DEVOLUCION</h2>
                     <hr class="light">
                     <p class="text-faded">
                       Bajo la cobertura de la garantía, toda la vuelta se debe realizar dentro de los 30 días. Una vez recibido el producto (s) los desperfectos que se llevará a 7-14 días para procesar y determinar la causa de la falla. Si el defecto es causado fabricación o montaje defectuoso entonces usted será elegible para el intercambio o el reembolso.                    </p>
                     <br/>
-                    <p class="text-faded">
-                      No se aceptan devoluciones de productos a base de no cumplir con su preferencia personal, incluyendo, sin limitarse a, el sonido de escape, la vibración, material y color. Cualquier artículo que se ha instalado y usado ya no será elegible para ser devuelto en ningún caso.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      El coste de envío será responsabilidad del comprador y se debe empacar con cuidado; no podemos aceptar un producto dañado durante el proceso de envío.                    </p>
+
                     <img src="img/McLaren_Armytrix Exhaust_VR-4.JPG" class="img-responsive" alt="">
                     <br/>
                     <h2 class="section-heading" id="qa">LEGAL</h2>
@@ -201,18 +131,12 @@
                       Mientras usted es el comprador original y está utilizando el producto de la manera que está destinado a ser utilizado, la cobertura de la garantía es de 18 meses. Sin embargo, la garantía quedará anulada si se realiza cualquier modificación, instalación incorrecta y / o mal uso del producto.
                     </p>
                     <br/>
-                    <p class="text-faded">
-                      Para una explicación más detallada, por favor consulte nuestra sección de Garantía. O póngase en contacto con nosotros directamente. Cada reclamo será tratado de manera individual para asegurar la mejor experiencia de servicio al cliente.
-                    </p>
-                    <br/>
+
                     <h3> ¿Y si quiero devolver el producto? </h3>
                     <p class="text-faded">
                       Usted califica para devolver el producto (s) si el defecto (s) es de material y / o mano de obra. Tomará 7 a 14 días para nosotros determinar la causa del fallo. Una vez que su reclamo ha sido verificada, proporcionaremos un reemplazo libre de cargo. Sin embargo, todos los gastos de envío son suyos para soportar.
                     </p>
-                    <br/>
-                    <p class="text-faded">
-                      Para una explicación más detallada, por favor consulte nuestra sección de Garantía. O póngase en contacto con nosotros directamente. Cada reclamo será tratado de manera individual para asegurar la mejor experiencia de servicio al cliente.
-                    </p>
+
                     <br/>
                     <h2 class="section-heading">COMPRAS</h2>
                     <hr class="light">
@@ -311,7 +235,7 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/img/voltexImport.jpg" target="_blank" class="portfolio-box">
+                    <a  data-toggle="modal" data-target="#carrusel" class="portfolio-box">
                         <img src="img/portfolio/img/voltexImport.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -326,7 +250,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/img/6.jpg" target="_blank" class="portfolio-box">
+                    <a data-toggle="modal" data-target="#carrusel" class="portfolio-box">
                         <img src="img/portfolio/img/6.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -341,7 +265,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/img/3.jpg" target="_blank" class="portfolio-box">
+                    <a data-toggle="modal" data-target="#carrusel" class="portfolio-box">
                         <img src="img/portfolio/img/3.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -356,7 +280,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/img/16.jpg" target="_blank" class="portfolio-box">
+                    <a  data-toggle="modal" data-target="#carrusel" class="portfolio-box">
                         <img src="img/portfolio/img/16.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -371,7 +295,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/img/19.jpg" target="_blank" class="portfolio-box">
+                    <a  data-toggle="modal" data-target="#carrusel" class="portfolio-box">
                         <img src="img/portfolio/img/19.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -386,7 +310,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/img/50.jpg" target="_blank" class="portfolio-box">
+                    <a data-toggle="modal" data-target="#carrusel" class="portfolio-box">
                         <img src="img/portfolio/img/50.jpg"  class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -403,8 +327,26 @@
             </div>
         </div>
     </section>
+<!--    Pop Up carrusel -->
+  <div id="carrusel" class="modal fade" role="dialog">
+      <div class="modal-dialog">
 
+        <!-- Modal content-->
+          <div class="modal-content">
+              <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Modal Header</h4>
+              </div>
+              <div class="modal-body">
+                  <p>Some text in the modal.</p>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
 
+          </div>
+        </div>
 
 
     <aside class="bg-dark">
