--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Pablo Limo inc.">
 
-    <title>ARMYTRIX - Automotive Weaponized</title>
+    <title>VoltexImport</title>
 
       <link rel='stylesheet' href='estilos.css'>
 
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">ARMYTRIX</a>
+                <a class="navbar-brand page-scroll" href="#page-top">VoltexImport</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -114,69 +114,29 @@
                        que sabía acerca de la conducción de rendimiento.
                     </p>
                     <br/>
-                    <p class="text-faded">
-                      Al seguir el credo de la consecución de la mayor potencia, sonido superior y verdadera
-                         versatilidad, construimos sistemas de escape Valvetronic rendimiento supremos que son segundos
-                          a ninguno. Todo fomentado por una cultura de la perseverancia y la innovación. ARMYTRIX no sólo
-                          crea escapes, creamos experiencias.
-                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      La combinación de los conocimientos y las ideas de nuestros ingenieros alemanes y japoneses, ARMYTRIX es el faro de revolucion,
-                       diseño y fabricación magistral. Estamos indiscutible en uno de los mejores productores de gama alta de escape de alto rendimiento
-                       sistemas en la industria automotora de la actualidad.
-                    </p>
-                    <br/>
+
+
                     <p class="text-faded">
                       Apreciamos el hecho de que cada uno de los vehículos de alto rendimiento son sofisticadas máquinas diseñadas para satisfacer nuestro deseo
                        para poner a prueba los límites. En consecuencia, los reemplazos del mercado de accesorios deben ser capaces de soportar el castigo y empujarlos
                        más allá de lo imaginable.
                     </p>
-                    <br/>
-                    <p class="text-faded">
-                      Nuestra pasión, experiencia y calidad son evidentes en nuestro diseño y fabricación de titanio aeroespacial y T304 de acero
-                       sistemas de acero. Los sistemas son probados en varias ocasiones y faltas eliminados para asegurarse de que obtiene el mejor absoluto, de escape a realizar
-                       posible.
-                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Escapes ARMYTRIX están diseñados para las especificaciones de cada vehículo y hechos a mano para garantizar un ajuste perfecto. Nos 3D escaneamos nuestra Audi, BMW, Ferrari, Lamborghini, McLaren, Mercedes-Benz, Nissan, Porsche y Volkswagen, para crear sistemas con la máxima compatibilidad.
-                    </p>
-                    <p class="text-faded">
-                      Nuestra firma acústica de escape se atribuyen al material utilizado y los complejos diseños de cámara interna. Desde un rev baja ronronear todo el camino hasta un aullido tono alto, lo tenemos todo cubierto. Las notas Eargasmic están obligados a convertir cualquier vehículo en el centro de la atención.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Nuestra innovadora tecnología Valvetronic trae versatilidad sin precedentes para los operadores. Un llavero simple, una prensa de un botón; a decidir cuándo y cómo quiere ser escuchado. Estamos dando la espalda poder para el conductor; una para gobernarlos a todos.                    </p>
-                    <br/>
-                    <p class="text-faded">
 
-                      El ARMYTRIX APP es una adición simple pero potente al arsenal, diseñado para mejorar la experiencia total sintonía, mediante la vinculación de la última tecnología con nuestra línea existente de productos. Esta combinación revolucionaria va a cambiar la forma de pensar sobre la presentación y el rendimiento.                    </p>
-                    <br/>
+
                     <p class="text-faded">
                       La aplicación es compatible con los sistemas tanto de Android y iOS, a través de una multitud de plataformas de teléfonos inteligentes, tabletas y otros dispositivos móviles. Desde dispositivo designado se puede medir con precisión el rendimiento del vehículo en ese momento exacto.                    </p>
                     <br/>
                     <p class="text-faded">
                       Se conecta de forma inalámbrica al Módulo OBDII móvil ARMYTRIX que extrae datos de la ECU y la transmite, en tiempo real, en el dispositivo de elección. Las lecturas de la ECU son datos registrados a altas velocidades de datos que no se encuentran en ningún otro dispositivo comercial. Mantener te informará de todo!                    </p>
                     <br/>
-                    <p class="text-faded">
-
-                      Nuestro exclusivo sistema cuenta con un convertidor de códigos de avería relacionados mecanismo catalítico que mantiene el vehículo funcionando sin problemas y de manera óptima. No más signo de verificación del motor se apague su momento en el sol. El módulo Plug-n-Play limpio y seguro proporciona un soplo de aire fresco de la vieja restricción, desordenado, alambre. Completamente unshackled, la libertad al alcance, el verdadero potencial de los tubos de escape ARMYTRIX está totalmente desatado por el mundo para ver.                    </p>
-                    <h2 class="section-heading" id="exhaust_warranty">GARANTÍA DE ESCAPE</h2>
+                                        <h2 class="section-heading" id="exhaust_warranty">GARANTÍA DE ESCAPE</h2>
                     <hr class="light">
                     <p class="text-faded">
 
                       ARMYTRIX CORP. Garantiza que sus productos están libres de defectos en materiales y mano de obra. Garantía se extiende sólo al comprador original con prueba de compra y para el vehículo original en el que se instaló el producto (s). La garantía no es transferible y es válida durante 12 meses a partir de la fecha de instalación. Todos los gastos de envío y los costos de aranceles asociados con esta garantía son de exclusiva responsabilidad del cliente.                    </p>
                     <br/>
-                    <p class="text-faded">
-                      Al recibir el producto (s), es responsabilidad personal del comprador de examinar las condiciones de la parte (s) antes de la instalación. Si cualquier parte (s) que demuestra defectos de materiales y / o mano de obra, el comprador debe documentar los defectos), póngase en contacto ARMYTRIX inmediatamente y devolver el producto (s) dentro de los 30 días. Nosotros reemplazamos todos los artículos defectuosos de forma gratuita, pero el costo de transporte incurrido será por cuenta del comprador.                    </p>
-                    <br/>
-                    <p class="text-faded">
 
-                      Garantía se considerará nula si daños en el producto (s) se debieron a una instalación incorrecta y / o uso inapropiado, incluyendo, pero no limitado a: el off-road, carreras, alteraciones no autorizadas al producto (s), falta de atención, daños por impacto y cualquier otro daño causado por el uso del producto (s) que no sea destinado por el fabricante.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Para proteger la integridad y funcionalidad del sistema de escape, en el modo de apagado cuando se alcanza 4.500 RPM o cuando la presión del turbo alcanza 0,8 bar, las válvulas se abrirá automáticamente como medida de seguridad. Un recordatorio amistoso, por que para cortar el sistema de escape de las posibilidades de la activación de la señal de "Check Engine" se incrementan y nuestra garantía no cubre esta u otras incompatibilidades de software. Recomendamos reasignación de la ECU del vehículo para evitar posibles conflictos.                    </p>
-                    <br/>
+                    
                     <p class="text-faded">
                       Sistemas de escape ARMYTRIX) deben ser instalados por un técnico (s) certificado para mantener su estado de la garantía. Nos reservamos el derecho de retener la emisión de crédito hasta que la pieza defectuosa (s) ha sido devuelto y se examinaron para determinar la razón de la falta.                    </p>
                     <br/>
