machacando codigo de gregorio a su peticion

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Pablo Limo inc.">
 
-    <title>VoltexImport</title>
+    <title>ARMYTRIX - Automotive Weaponized</title>
 
       <link rel='stylesheet' href='estilos.css'>
 
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">VoltexImport</a>
+                <a class="navbar-brand page-scroll" href="#page-top">ARMYTRIX</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -108,43 +108,14 @@
                        avanzada tecnología de sistema de escape que va a cuestionar todo lo que pensabas
                        que sabía acerca de la conducción de rendimiento.
                     </p>
-<<<<<<< HEAD
-                    <br/>
-
-
-                    <p class="text-faded">
-                      Apreciamos el hecho de que cada uno de los vehículos de alto rendimiento son sofisticadas máquinas diseñadas para satisfacer nuestro deseo
-                       para poner a prueba los límites. En consecuencia, los reemplazos del mercado de accesorios deben ser capaces de soportar el castigo y empujarlos
-                       más allá de lo imaginable.
-                    </p>
-
-
-                    <p class="text-faded">
-                      La aplicación es compatible con los sistemas tanto de Android y iOS, a través de una multitud de plataformas de teléfonos inteligentes, tabletas y otros dispositivos móviles. Desde dispositivo designado se puede medir con precisión el rendimiento del vehículo en ese momento exacto.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      Se conecta de forma inalámbrica al Módulo OBDII móvil ARMYTRIX que extrae datos de la ECU y la transmite, en tiempo real, en el dispositivo de elección. Las lecturas de la ECU son datos registrados a altas velocidades de datos que no se encuentran en ningún otro dispositivo comercial. Mantener te informará de todo!                    </p>
-                    <br/>
-                                        <h2 class="section-heading" id="exhaust_warranty">GARANTÍA DE ESCAPE</h2>
-=======
 
                     <h2 class="section-heading" id="exhaust_warranty">GARANTÍA DE ESCAPE</h2>
->>>>>>> 5ac83d4ceb0302d09daf9fca097ab28d38db18d2
                     <hr class="light">
                     <p class="text-faded">
 
                       ARMYTRIX CORP. Garantiza que sus productos están libres de defectos en materiales y mano de obra. Garantía se extiende sólo al comprador original con prueba de compra y para el vehículo original en el que se instaló el producto (s). La garantía no es transferible y es válida durante 12 meses a partir de la fecha de instalación. Todos los gastos de envío y los costos de aranceles asociados con esta garantía son de exclusiva responsabilidad del cliente.                    </p>
                     <br/>
 
-<<<<<<< HEAD
-                    
-                    <p class="text-faded">
-                      Sistemas de escape ARMYTRIX) deben ser instalados por un técnico (s) certificado para mantener su estado de la garantía. Nos reservamos el derecho de retener la emisión de crédito hasta que la pieza defectuosa (s) ha sido devuelto y se examinaron para determinar la razón de la falta.                    </p>
-                    <br/>
-                    <p class="text-faded">
-                      ARMYTRIX no será responsable de los daños y el desgaste y desgarre diarias que se producen en condiciones normales de conducción; incluyendo, entre otros: el hombre o daños naturales a la superficie externa, deterioro interno, decoloración, óxido y la corrosión. Desgaste y lágrimas son inevitables; se recomienda chequeos regulares y cuidado para extender la vida útil del producto (s) y mantener su rendimiento.                    </p>
-=======
->>>>>>> 5ac83d4ceb0302d09daf9fca097ab28d38db18d2
                     <h2 class="section-heading" id="return">POLITICA DE DEVOLUCION</h2>
                     <hr class="light">
                     <p class="text-faded">
