--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Pablo Limo inc.">
 
-    <title>ARMYTRIX - Automotive Weaponized</title>
+    <title>Voltex Import</title>
 
       <link rel='stylesheet' href='estilos.css'>
 
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">ARMYTRIX</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Voltex Import</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -67,15 +67,14 @@
                               <li><a class="page-scroll" href="#qa">P Y R Escape</a></li>
                             </ul>
                     </li>
+
                     <li>
-                        <a class="page-scroll"  href="#portfolio" >Portafolio</a>
+                        <a class="page-scroll" href="#dyno">tech</a>
 
                     </li>
                     <li>
-                        <a class="dropdown-toggle" data-toggle="dropdown" href="">tech</a>
-                        <ul class="dropdown-menu">
-                          <li><a class="page-scroll" href="#dyno">DYNO PROVEN</a></li>
-                        </ul>
+                        <a class="page-scroll"  href="#portfolio" >Portafolio</a>
+
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contacto</a>
@@ -96,7 +95,7 @@
         </div>
 
     </header>
-
+<!-- about us    -->
     <section class="bg-primary" id="about">
         <div class="container">
             <div class="row">
@@ -191,7 +190,7 @@
             </div>
         </div>
     </section>
-
+<!-- tech     -->
     <section id="dyno">
         <div class="container">
             <div class="row">
@@ -230,7 +229,7 @@
           </div>
         </div>
     </section>
-
+<!-- portafolio      -->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
@@ -358,7 +357,7 @@
         </div>
     </aside>
 
-
+<!-- contact  -->
     <section id="contact">
         <div class="container">
             <div class="row">
@@ -373,7 +372,7 @@
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p><a href="mailto:your-email@your-domain.com">Jhusey@volteximport.com</a></p>
+                    <p><a href="mailto:Jhusey@volteximport.com">Jhusey@volteximport.com</a></p>
                 </div>
             </div>
             <div>
